crates/atlas-runtime/tests/snapshots/parser_tests__parse_grouping.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Mul
            left:
              Group:
                expr:
                  Binary:
                    op: Add
                    left:
                      Literal:
                        - Number: 1
                        - start: 1
                          end: 2
                    right:
                      Literal:
                        - Number: 2
                        - start: 5
                          end: 6
                    span:
                      start: 1
                      end: 6
                span:
                  start: 0
                  end: 7
            right:
              Literal:
                - Number: 3
                - start: 10
                  end: 11
            span:
              start: 0
              end: 11
        span:
          start: 0
          end: 12
